// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`camelCase URLSearchParams 1`] = `"someId=1&someName=2"`;

exports[`camelCase array with deep objects 1`] = `
Array [
  Object {
    "someChld": Object {
      "someChld": Object {
        "someChld": "sub_hi",
      },
    },
    "someId": 1,
    "someName": "hi",
  },
  Object {
    "someChld": Object {
      "someChld": Object {
        "someChld": "sub_hi",
      },
    },
    "someId": 1,
    "someName": "hi",
  },
  Object {
    "someChld": Object {
      "someChld": Object {
        "someChld": "sub_hi",
      },
    },
    "someId": 1,
    "someName": "hi",
  },
  Object {
    "someChld": Object {
      "someChld": Object {
        "someChld": "sub_hi",
      },
    },
    "someId": 1,
    "someName": "hi",
  },
]
`;

exports[`camelCase array with simple objects 1`] = `
Array [
  Object {
    "someId": 1,
    "someName": "hi",
  },
  Object {
    "someId": 1,
    "someName": "hi",
  },
  Object {
    "someId": 1,
    "someName": "hi",
  },
  Object {
    "someId": 1,
    "someName": "hi",
  },
]
`;

exports[`camelCase deep object 1`] = `
Object {
  "someChld": Object {
    "someChld": Object {
      "someChld": "sub_hi",
    },
  },
  "someId": 1,
  "someName": "hi",
}
`;

exports[`camelCase one level simple object 1`] = `
Object {
  "someId": 1,
  "someName": "hi",
}
`;

exports[`camelCase simple array 1`] = `
Array [
  1,
  2,
  3,
  4,
]
`;
